tests/snapshots/r#mod__parser__ical_example_freebusy.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "VERSION",
            params: [],
            value: Some(
                "2.0",
            ),
        },
        ContentLine {
            name: "PRODID",
            params: [],
            value: Some(
                "-//RDU Software//NONSGML HandCal//EN",
            ),
        },
    ],
    events: [],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [
        IcalFreeBusy {
            uid: "hello",
            properties: [
                ContentLine {
                    name: "UID",
                    params: [],
                    value: Some(
                        "hello",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: [],
                    value: Some(
                        "20250726T130653Z",
                    ),
                },
                ContentLine {
                    name: "ORGANIZER",
                    params: [],
                    value: Some(
                        "mailto:jsmith@example.com",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: [],
                    value: Some(
                        "19980313T141711Z",
                    ),
                },
                ContentLine {
                    name: "DTEND",
                    params: [],
                    value: Some(
                        "19980410T141711Z",
                    ),
                },
                ContentLine {
                    name: "FREEBUSY",
                    params: [],
                    value: Some(
                        "19980314T233000Z/19980315T003000Z",
                    ),
                },
                ContentLine {
                    name: "FREEBUSY",
                    params: [],
                    value: Some(
                        "19980316T153000Z/19980316T163000Z",
                    ),
                },
                ContentLine {
                    name: "FREEBUSY",
                    params: [],
                    value: Some(
                        "19980318T030000Z/19980318T040000Z",
                    ),
                },
                ContentLine {
                    name: "URL",
                    params: [],
                    value: Some(
                        "http://www.example.com/calendar/busytime/jsmith.ifb",
                    ),
                },
            ],
        },
    ],
    vtimezones: [],
}
