tests/snapshots/r#mod__parser__ical_example_journals.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "-//Ximian//NONSGML Evolution Calendar//EN",
            ),
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "2.0",
            ),
        },
        ContentLine {
            name: "METHOD",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "PUBLISH",
            ),
        },
    ],
    events: [],
    alarms: [],
    todos: [],
    journals: [
        IcalJournal {
            uid: "84f728973b37b1cb9abf7556adde789b780779f7",
            dtstamp: IcalDTSTAMPProperty(
                DateTime(
                    CalDateTime(
                        2025-07-26T13:06:53Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "84f728973b37b1cb9abf7556adde789b780779f7",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20250726T130653Z",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "journal entry!",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20250705",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PRIVATE",
                    ),
                },
                ContentLine {
                    name: "DESCRIPTION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "description\\n\\nnice",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "1",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20250726T130707Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20250726T130707Z",
                    ),
                },
                ContentLine {
                    name: "X-EVOLUTION-CALDAV-ETAG",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "0af7d703351f3eed3c08491bdcb10a4c138181cc6be73d5b58aa13ccab898b55",
                    ),
                },
            ],
        },
    ],
    free_busys: [],
    vtimezones: [],
}
