tests/snapshots/r#mod__parser__ical_example_rrule.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "CALSCALE",
            params: [],
            value: Some(
                "GREGORIAN",
            ),
        },
        ContentLine {
            name: "PRODID",
            params: [],
            value: Some(
                "-//Ximian//NONSGML Evolution Calendar//EN",
            ),
        },
        ContentLine {
            name: "VERSION",
            params: [],
            value: Some(
                "2.0",
            ),
        },
    ],
    events: [
        IcalEvent {
            uid: "eb93535004f863c4e7a39b8b18daa6db3b353348",
            recurid: None,
            properties: [
                ContentLine {
                    name: "UID",
                    params: [],
                    value: Some(
                        "eb93535004f863c4e7a39b8b18daa6db3b353348",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: [],
                    value: Some(
                        "20250723T191244Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: [
                        (
                            "TZID",
                            [
                                "Europe/Berlin",
                            ],
                        ),
                    ],
                    value: Some(
                        "20250723T210000",
                    ),
                },
                ContentLine {
                    name: "DTEND",
                    params: [
                        (
                            "TZID",
                            [
                                "Europe/Berlin",
                            ],
                        ),
                    ],
                    value: Some(
                        "20250723T212500",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: [],
                    value: Some(
                        "2",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: [],
                    value: Some(
                        "something with rrule",
                    ),
                },
                ContentLine {
                    name: "TRANSP",
                    params: [],
                    value: Some(
                        "OPAQUE",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: [],
                    value: Some(
                        "PUBLIC",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: [],
                    value: Some(
                        "20250723T191256Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: [],
                    value: Some(
                        "20250723T191256Z",
                    ),
                },
            ],
            alarms: [],
        },
    ],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    vtimezones: [
        IcalTimeZone {
            properties: [
                ContentLine {
                    name: "TZID",
                    params: [],
                    value: Some(
                        "Europe/Berlin",
                    ),
                },
                ContentLine {
                    name: "X-LIC-LOCATION",
                    params: [],
                    value: Some(
                        "Europe/Berlin",
                    ),
                },
            ],
            transitions: [
                IcalTimeZoneTransition {
                    transition: DAYLIGHT,
                    properties: [
                        ContentLine {
                            name: "TZNAME",
                            params: [],
                            value: Some(
                                "CEST",
                            ),
                        },
                        ContentLine {
                            name: "TZOFFSETFROM",
                            params: [],
                            value: Some(
                                "+0100",
                            ),
                        },
                        ContentLine {
                            name: "TZOFFSETTO",
                            params: [],
                            value: Some(
                                "+0200",
                            ),
                        },
                        ContentLine {
                            name: "DTSTART",
                            params: [],
                            value: Some(
                                "19810329T020000",
                            ),
                        },
                        ContentLine {
                            name: "RRULE",
                            params: [],
                            value: Some(
                                "FREQ=YEARLY;UNTIL=20370329T010000Z;BYDAY=-1SU;BYMONTH=3",
                            ),
                        },
                    ],
                },
                IcalTimeZoneTransition {
                    transition: STANDARD,
                    properties: [
                        ContentLine {
                            name: "TZNAME",
                            params: [],
                            value: Some(
                                "CET",
                            ),
                        },
                        ContentLine {
                            name: "TZOFFSETFROM",
                            params: [],
                            value: Some(
                                "+0200",
                            ),
                        },
                        ContentLine {
                            name: "TZOFFSETTO",
                            params: [],
                            value: Some(
                                "+0100",
                            ),
                        },
                        ContentLine {
                            name: "DTSTART",
                            params: [],
                            value: Some(
                                "19961027T030000",
                            ),
                        },
                        ContentLine {
                            name: "RRULE",
                            params: [],
                            value: Some(
                                "FREQ=YEARLY;UNTIL=20361026T010000Z;BYDAY=-1SU;BYMONTH=10",
                            ),
                        },
                    ],
                },
            ],
        },
    ],
}
