tests/snapshots/r#mod__parser__ical_example_todos.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "-//Ximian//NONSGML Evolution Calendar//EN",
            ),
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "2.0",
            ),
        },
        ContentLine {
            name: "METHOD",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "PUBLISH",
            ),
        },
    ],
    events: [],
    alarms: [],
    todos: [
        IcalTodo {
            uid: "89b13d12c2142cc66192932e1e560ed344dfb174",
            dtstart: Some(
                IcalDTSTARTProperty(
                    Date(
                        CalDate(
                            2025-08-04,
                            Local,
                        ),
                    ),
                    ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                ),
            ),
            due: Some(
                IcalDUEProperty(
                    Date(
                        CalDate(
                            2025-08-19,
                            Local,
                        ),
                    ),
                    ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                ),
            ),
            dtstamp: IcalDTSTAMPProperty(
                DateTime(
                    CalDateTime(
                        2025-07-26T11:26:18Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "89b13d12c2142cc66192932e1e560ed344dfb174",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20250726T112618Z",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "amazing task",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20250804",
                    ),
                },
                ContentLine {
                    name: "DUE",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20250819",
                    ),
                },
                ContentLine {
                    name: "PERCENT-COMPLETE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "0",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PUBLIC",
                    ),
                },
                ContentLine {
                    name: "ESTIMATED-DURATION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "P1D",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "1",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20250726T130323Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20250726T130323Z",
                    ),
                },
                ContentLine {
                    name: "X-EVOLUTION-CALDAV-ETAG",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "302e353d3134d1104500f9d9153454e6e21c5da41ae8a5fd26f8b0d98ee34979",
                    ),
                },
            ],
            alarms: [],
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: None,
        },
    ],
    journals: [],
    free_busys: [],
    vtimezones: {},
    timezones: {},
}
