tests/snapshots/r#mod__parser__ical_expand.snap
---
source: tests/mod.rs
expression: cal.expand_calendar()
---
[
    IcalCalendar {
        properties: [
            ContentLine {
                name: "VERSION",
                params: [],
                value: Some(
                    "4.0",
                ),
            },
            ContentLine {
                name: "CALSCALE",
                params: [],
                value: Some(
                    "GREGORIAN",
                ),
            },
            ContentLine {
                name: "PRODID",
                params: [],
                value: Some(
                    "RustiCal",
                ),
            },
            ContentLine {
                name: "X-WR-CALNAME",
                params: [],
                value: Some(
                    "Test",
                ),
            },
        ],
        events: [],
        alarms: [],
        todos: [
            IcalTodo {
                properties: [
                    ContentLine {
                        name: "UID",
                        params: [],
                        value: Some(
                            "b97901931b6d107683c6e31f96fce72e881853dd",
                        ),
                    },
                    ContentLine {
                        name: "DTSTAMP",
                        params: [],
                        value: Some(
                            "20250823T085610Z",
                        ),
                    },
                    ContentLine {
                        name: "SUMMARY",
                        params: [],
                        value: Some(
                            "Test Task Ljubljana",
                        ),
                    },
                    ContentLine {
                        name: "DTSTART",
                        params: [
                            (
                                "TZID",
                                [
                                    "Europe/Ljubljana",
                                ],
                            ),
                        ],
                        value: Some(
                            "20250829T043000",
                        ),
                    },
                    ContentLine {
                        name: "PERCENT-COMPLETE",
                        params: [],
                        value: Some(
                            "0",
                        ),
                    },
                    ContentLine {
                        name: "CLASS",
                        params: [],
                        value: Some(
                            "PUBLIC",
                        ),
                    },
                    ContentLine {
                        name: "SEQUENCE",
                        params: [],
                        value: Some(
                            "1",
                        ),
                    },
                    ContentLine {
                        name: "CREATED",
                        params: [],
                        value: Some(
                            "20250823T085952Z",
                        ),
                    },
                    ContentLine {
                        name: "LAST-MODIFIED",
                        params: [],
                        value: Some(
                            "20250823T085952Z",
                        ),
                    },
                ],
                alarms: [],
            },
        ],
        journals: [],
        free_busys: [],
        timezones: [
            IcalTimeZone {
                properties: [
                    ContentLine {
                        name: "TZID",
                        params: [],
                        value: Some(
                            "Europe/Ljubljana",
                        ),
                    },
                    ContentLine {
                        name: "X-LIC-LOCATION",
                        params: [],
                        value: Some(
                            "Europe/Ljubljana",
                        ),
                    },
                ],
                transitions: [
                    IcalTimeZoneTransition {
                        transition: DAYLIGHT,
                        properties: [
                            ContentLine {
                                name: "TZNAME",
                                params: [],
                                value: Some(
                                    "CEST",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETFROM",
                                params: [],
                                value: Some(
                                    "+0100",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETTO",
                                params: [],
                                value: Some(
                                    "+0200",
                                ),
                            },
                            ContentLine {
                                name: "DTSTART",
                                params: [],
                                value: Some(
                                    "19830327T020000",
                                ),
                            },
                            ContentLine {
                                name: "RRULE",
                                params: [],
                                value: Some(
                                    "FREQ=YEARLY;UNTIL=20370329T010000Z;BYDAY=-1SU;BYMONTH=3",
                                ),
                            },
                        ],
                    },
                    IcalTimeZoneTransition {
                        transition: STANDARD,
                        properties: [
                            ContentLine {
                                name: "TZNAME",
                                params: [],
                                value: Some(
                                    "CET",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETFROM",
                                params: [],
                                value: Some(
                                    "+0200",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETTO",
                                params: [],
                                value: Some(
                                    "+0100",
                                ),
                            },
                            ContentLine {
                                name: "DTSTART",
                                params: [],
                                value: Some(
                                    "19961027T030000",
                                ),
                            },
                            ContentLine {
                                name: "RRULE",
                                params: [],
                                value: Some(
                                    "FREQ=YEARLY;UNTIL=20361026T010000Z;BYDAY=-1SU;BYMONTH=10",
                                ),
                            },
                        ],
                    },
                    IcalTimeZoneTransition {
                        transition: STANDARD,
                        properties: [
                            ContentLine {
                                name: "TZNAME",
                                params: [],
                                value: Some(
                                    "CET",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETFROM",
                                params: [],
                                value: Some(
                                    "+0200",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETTO",
                                params: [],
                                value: Some(
                                    "+0100",
                                ),
                            },
                            ContentLine {
                                name: "DTSTART",
                                params: [],
                                value: Some(
                                    "20371025T030000",
                                ),
                            },
                            ContentLine {
                                name: "RRULE",
                                params: [],
                                value: Some(
                                    "FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10",
                                ),
                            },
                        ],
                    },
                    IcalTimeZoneTransition {
                        transition: DAYLIGHT,
                        properties: [
                            ContentLine {
                                name: "TZNAME",
                                params: [],
                                value: Some(
                                    "CEST",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETFROM",
                                params: [],
                                value: Some(
                                    "+0100",
                                ),
                            },
                            ContentLine {
                                name: "TZOFFSETTO",
                                params: [],
                                value: Some(
                                    "+0200",
                                ),
                            },
                            ContentLine {
                                name: "DTSTART",
                                params: [],
                                value: Some(
                                    "20380328T020000",
                                ),
                            },
                            ContentLine {
                                name: "RRULE",
                                params: [],
                                value: Some(
                                    "FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3",
                                ),
                            },
                        ],
                    },
                ],
            },
        ],
    },
    IcalCalendar {
        properties: [
            ContentLine {
                name: "VERSION",
                params: [],
                value: Some(
                    "4.0",
                ),
            },
            ContentLine {
                name: "CALSCALE",
                params: [],
                value: Some(
                    "GREGORIAN",
                ),
            },
            ContentLine {
                name: "PRODID",
                params: [],
                value: Some(
                    "RustiCal",
                ),
            },
            ContentLine {
                name: "X-WR-CALNAME",
                params: [],
                value: Some(
                    "Test",
                ),
            },
        ],
        events: [],
        alarms: [],
        todos: [],
        journals: [
            IcalJournal {
                properties: [
                    ContentLine {
                        name: "UID",
                        params: [],
                        value: Some(
                            "5b511b6b4d74e40365df62d040911ebf51441162",
                        ),
                    },
                    ContentLine {
                        name: "DTSTAMP",
                        params: [],
                        value: Some(
                            "20250823T085957Z",
                        ),
                    },
                    ContentLine {
                        name: "SUMMARY",
                        params: [],
                        value: Some(
                            "Test Journal",
                        ),
                    },
                    ContentLine {
                        name: "DTSTART",
                        params: [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                        value: Some(
                            "20250807",
                        ),
                    },
                    ContentLine {
                        name: "CLASS",
                        params: [],
                        value: Some(
                            "PUBLIC",
                        ),
                    },
                    ContentLine {
                        name: "SEQUENCE",
                        params: [],
                        value: Some(
                            "1",
                        ),
                    },
                    ContentLine {
                        name: "CREATED",
                        params: [],
                        value: Some(
                            "20250823T090008Z",
                        ),
                    },
                    ContentLine {
                        name: "LAST-MODIFIED",
                        params: [],
                        value: Some(
                            "20250823T090008Z",
                        ),
                    },
                ],
            },
        ],
        free_busys: [],
        timezones: [],
    },
]
